2008-04-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (BUSY_STATE, CheckChannelErrors,
	  TclCopyChannel): New macro, and the places using it. This change
	  allows for bi-directional fcopy on channels. [Bug 1350564].
	  Thanks to Alexandre Ferrieux <ferrieux@users.sourceforge.net>
	  for the patch.

	* tests/io.test (io-53.9): Made test cleanup robust against the
	  possibility of slow process shutdown on Windows. Backported from
	  Kevin Kenny's change to the same test on the 8.5 and head
	  branches.

2008-04-04  Andreas Kupries  <andreask@activestate.com>

	* tests/io.test (io-53.9): Added testcase for [Bug 780533], based
	  on Alexandre's test script. Also fixed problem with timer in
	  preceding test, was not canceled properly in the ok case.

2008-04-03  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch [Bug 1932639] to
	* tests/io.test: prevent fcopy from calling -command synchronously
	  the first time. Thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for report and patch.

2008-04-02  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): Applied patch for the fcopy problem
	  [Bug 780533], with many thanks to Alexandre Ferrieux
	  <ferrieux@users.sourceforge.net> for tracking it down and
	  providing a solution. Still have to convert his test script into
	  a proper test case.

2008-03-27  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): fix 64bit support for Sun cc. [Bug 1921166]

	* unix/dltest/Makefile.in: support use of LDFLAGS in SHLIB_LD.

	* unix/configure: autoconf-2.13

2008-03-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tclBinary.c: bug #1923966 - crash in binary format
	* tests/binary.test:   Added tests for the above crash condition.

2008-03-11  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c: avoid using CoreFoundation after fork() on